PYIC-6973: Refactor HMRC migration test VCs